# gazebo_segment_camera_plugin

./: CMakeLists.txt  package.xml
config/: camera.yaml
include/object_camera_plugin/: object_camera_plugin.hpp
src/: object_camera_plugin.cpp
urdf/: object_camera_plugin.xacro
