<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_camera_plugin</name>
  <version>1.0.0</version>
  <description>Plugin to simulate a object camera</description>
  <maintainer email="guanqi.chen@stihl.de">Guanqi Chen (D2/CVL-x3)</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>

  <depend>stihl_sim_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}" gazebo_media_path="${prefix}/models" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
